--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .header {
   background-color: #1f2937;
 }
@@ -61,6 +65,10 @@
   height: auto;
 }
 
+.services {
+  padding: 20px 0;
+}
+
 .services--wrapper {
   max-width: 800px;
   margin: 0 auto;
@@ -69,7 +77,6 @@
 .services__title {
   font-size: 32px;
   text-align: center;
-  padding: 20px;
 }
 
 .service--wrapper {
@@ -87,6 +94,7 @@
 
 .quote {
   background-color: #e5e7eb;
+  padding: 50px 0;
 }
 
 .quote--wrapper {
@@ -97,6 +105,19 @@
 .quote--text {
   font-size: 36px;
   font-style: italic;
+  font-weight: 300;
+  text-align: center;
+}
+
+.quote--author {
+  text-align: right;
+  font-weight: 900;
+}
+
+.pricing__title {
+  font-size: 32px;
+  text-align: center;
+  padding: 20px 0;
 }
 
 .pricing--wrapper {
